Remove song limit and add privacyStatus
